Added some new endpoints
