# docs/openapi_flowers.yaml
@@ -7,12 +7,46 @@ info:
 
     Для использования бота нужно сделать отдельную авторизацию с Oauth телеги. Пока стандартный шаблон.
     
-    Last update: 02:30 26.02.24 by NF
+    Last update: 00:00 27.02.24 by NF
 servers:
   - url: http://localhost:8453/api/v1/
     description: API version 1
 
 paths:
+  /uploadImage:
+    post:
+      summary: Загрузка изображений + (НА ПОРТУ 8450!)
+      tags:
+        - General
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                # 'file' will be the field name in this multipart request
+                file:
+                  type: string
+                  format: binary
+
+      responses:
+        200:
+          description: Responce with data
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  path:
+                    type: string
+                    description: "path to image (without domain)"
+                    example: "/api/v1/image/4a2fb686ea6bf857a7e892df82749e0dc8fb7cd5dfcb41a5dd435988"
+        default:
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
   /ping:
     get:
       summary: Проверка доступности API +
@@ -411,7 +445,6 @@ paths:
     post:
       summary: Написание отзыва к заказу
       tags:
-        - User Order
         - Reviews
       security:
         - bearerAuth: []
@@ -447,7 +480,6 @@ paths:
     put:
       summary: Изменение отзыва к заказу
       tags:
-        - User Order
         - Reviews
       security:
         - bearerAuth: []
@@ -484,7 +516,6 @@ paths:
     delete:
       summary: Удаление отзыва к заказу
       tags:
-        - User Order
         - Reviews
       security:
         - bearerAuth: []
@@ -639,7 +670,7 @@ paths:
 
   /catalog/getCatalogItemDetails:
     get:
-      summary: Получение деталей о товаре (-)
+      summary: Получение деталей о товаре (+)
       tags:
         - Catalog
       parameters:
@@ -807,7 +838,7 @@ paths:
   
   /supplier/ordersForMe:
     get:
-      summary: Заказы, которые сделали пользователи
+      summary: Заказы, которые сделали пользователи (+)
       tags:
         - Supplier
       security:
@@ -827,6 +858,71 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+  
+  /supplier/setOrderStatus:
+    post:
+      summary: Установка статуса обработки заказа (+)
+      tags:
+        - Supplier
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: query
+          name: orderId
+          required: true
+          schema:
+            $ref: "#/components/schemas/ProductId"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                newStatus:
+                  type: string
+                  example: "Доставляется"
+      responses:
+        200:
+          description: Responce with data
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/DefaultPing"
+        default:
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+  
+  /supplier/finishOrder:
+    post:
+      summary: Завершение заказа (+)
+      tags:
+        - Supplier
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: query
+          name: orderId
+          required: true
+          schema:
+            $ref: "#/components/schemas/ProductId"
+      responses:
+        200:
+          description: Responce with data
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/DefaultPing"
+        default:
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+  
   
   /supplier/editProduct:
     put:
@@ -880,6 +976,50 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/DefaultPing"
+        default:
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+  /supplier/supplierReport:
+    get:
+      summary: Получение отчёта о продажах
+      tags:
+        - Supplier
+      security:
+        - bearerAuth: []
+      responses:
+        200:
+          description: Responce with data
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    ID Заявки:
+                      type: integer
+                      example: 1
+                    Дата создания (UTC):
+                      type: string
+                      example: "DD-MM-YYYY"
+                    ID Товара:
+                      type: integer
+                      example: 1
+                    Сумма:
+                      type: integer
+                      example: 1
+                    Валюта:
+                      type: string
+                      example: "RUB"
+                    Статус оплаты:
+                      type: string
+                      example: "Тест"
+                    Комментарий банка:
+                      type: string
+                      example: "Тест"
         default:
           description: Error
           content:
